# u

./: Cargo.toml  README.md  build.rs
src/: init.rs  main.rs  runner.rs  settings.rs
static/: main.py  manifest.json
static/scripts/create/: main.py
static/scripts/delete/: main.py
static/scripts/help/: main.py
static/scripts/scripts.create/: main.py
static/scripts/scripts.edit/: main.py
static/scripts/scripts.help/: main.py
static/templates/bash/: main.sh
static/templates/perl/: main.pl
static/templates/python-uv/: main.py.jinja
static/templates/sh/: main.sh  main.sh.jinja
static/utils/: args.py  colors.py  lib.py
