[package]
name = "u"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
flate2 = "1.0.35"
homedir = "0.3.4"
inquire = "0.7.5"
tar = "0.4.43"

[build-dependencies]
flate2 = "1.0.35"
glob = "0.3.2"
tar = "0.4.43"
